@@ -10,7 +10,8 @@ to templates.  DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
   <meta http-equiv="Content-Type" content="text/html; charset=%(encoding)s" />
   <meta name="generator" content="Docutils %(version)s: http://docutils.sourceforge.net/" />
   <title>PEP %(pep)s -- %(title)s</title>
-  %(stylesheet)s</head>
+  %(stylesheet)s
+</head>
 <body bgcolor="white">
 <table class="navigation" cellpadding="0" cellspacing="0"
        width="100%%" border="0">
